// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/"
>
          <h1
                    className="app--title"
          >
                    New Idea
          </h1>
</Link>,
        <div
          className="sign--up-container"
/>,
        <div
          className="collapsible--menu"
>
          <input
                    id="menu"
                    type="checkbox"
          />
          <label
                    htmlFor="menu"
          />
          <div
                    className="menu-content"
          >
                    <ul>
                              <li
                                        className="menu-link"
                              >
                                        <NavLink
                                                  activeClassName="selected"
                                                  aria-current="page"
                                                  to="/"
                                        >
                                                  Home
                                        </NavLink>
                              </li>
                              <li
                                        className="menu-link"
                              >
                                        <NavLink
                                                  activeClassName="selected"
                                                  aria-current="page"
                                                  to="/profile"
                                        >
                                                  Profile
                                        </NavLink>
                              </li>
                              <li
                                        className="menu-link"
                              >
                                        <NavLink
                                                  activeClassName="selected"
                                                  aria-current="page"
                                                  to="/ideaform"
                                        >
                                                  New Idea
                                        </NavLink>
                              </li>
                              <li
                                        className="menu-link"
                                        onClick={[Function]}
                              >
                                        <a>
                                                  Sign Up / Sign In
                                        </a>
                              </li>
                    </ul>
          </div>
</div>,
      ],
      "className": "header--container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <h1
            className="app--title"
>
            New Idea
</h1>,
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "New Idea",
            "className": "app--title",
          },
          "ref": null,
          "rendered": "New Idea",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "sign--up-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              id="menu"
              type="checkbox"
/>,
            <label
              htmlFor="menu"
/>,
            <div
              className="menu-content"
>
              <ul>
                            <li
                                          className="menu-link"
                            >
                                          <NavLink
                                                        activeClassName="selected"
                                                        aria-current="page"
                                                        to="/"
                                          >
                                                        Home
                                          </NavLink>
                            </li>
                            <li
                                          className="menu-link"
                            >
                                          <NavLink
                                                        activeClassName="selected"
                                                        aria-current="page"
                                                        to="/profile"
                                          >
                                                        Profile
                                          </NavLink>
                            </li>
                            <li
                                          className="menu-link"
                            >
                                          <NavLink
                                                        activeClassName="selected"
                                                        aria-current="page"
                                                        to="/ideaform"
                                          >
                                                        New Idea
                                          </NavLink>
                            </li>
                            <li
                                          className="menu-link"
                                          onClick={[Function]}
                            >
                                          <a>
                                                        Sign Up / Sign In
                                          </a>
                            </li>
              </ul>
</div>,
          ],
          "className": "collapsible--menu",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "menu",
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "htmlFor": "menu",
            },
            "ref": null,
            "rendered": null,
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul>
                <li
                                className="menu-link"
                >
                                <NavLink
                                                activeClassName="selected"
                                                aria-current="page"
                                                to="/"
                                >
                                                Home
                                </NavLink>
                </li>
                <li
                                className="menu-link"
                >
                                <NavLink
                                                activeClassName="selected"
                                                aria-current="page"
                                                to="/profile"
                                >
                                                Profile
                                </NavLink>
                </li>
                <li
                                className="menu-link"
                >
                                <NavLink
                                                activeClassName="selected"
                                                aria-current="page"
                                                to="/ideaform"
                                >
                                                New Idea
                                </NavLink>
                </li>
                <li
                                className="menu-link"
                                onClick={[Function]}
                >
                                <a>
                                                Sign Up / Sign In
                                </a>
                </li>
</ul>,
              "className": "menu-content",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li
                    className="menu-link"
>
                    <NavLink
                                        activeClassName="selected"
                                        aria-current="page"
                                        to="/"
                    >
                                        Home
                    </NavLink>
</li>,
                  <li
                    className="menu-link"
>
                    <NavLink
                                        activeClassName="selected"
                                        aria-current="page"
                                        to="/profile"
                    >
                                        Profile
                    </NavLink>
</li>,
                  <li
                    className="menu-link"
>
                    <NavLink
                                        activeClassName="selected"
                                        aria-current="page"
                                        to="/ideaform"
                    >
                                        New Idea
                    </NavLink>
</li>,
                  <li
                    className="menu-link"
                    onClick={[Function]}
>
                    <a>
                                        Sign Up / Sign In
                    </a>
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <NavLink
                      activeClassName="selected"
                      aria-current="page"
                      to="/"
>
                      Home
</NavLink>,
                    "className": "menu-link",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "activeClassName": "selected",
                      "aria-current": "page",
                      "children": "Home",
                      "to": "/",
                    },
                    "ref": null,
                    "rendered": "Home",
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <NavLink
                      activeClassName="selected"
                      aria-current="page"
                      to="/profile"
>
                      Profile
</NavLink>,
                    "className": "menu-link",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "activeClassName": "selected",
                      "aria-current": "page",
                      "children": "Profile",
                      "to": "/profile",
                    },
                    "ref": null,
                    "rendered": "Profile",
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <NavLink
                      activeClassName="selected"
                      aria-current="page"
                      to="/ideaform"
>
                      New Idea
</NavLink>,
                    "className": "menu-link",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "activeClassName": "selected",
                      "aria-current": "page",
                      "children": "New Idea",
                      "to": "/ideaform",
                    },
                    "ref": null,
                    "rendered": "New Idea",
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a>
                      Sign Up / Sign In
</a>,
                    "className": "menu-link",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Sign Up / Sign In",
                    },
                    "ref": null,
                    "rendered": "Sign Up / Sign In",
                    "type": "a",
                  },
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/"
>
            <h1
                        className="app--title"
            >
                        New Idea
            </h1>
</Link>,
          <div
            className="sign--up-container"
/>,
          <div
            className="collapsible--menu"
>
            <input
                        id="menu"
                        type="checkbox"
            />
            <label
                        htmlFor="menu"
            />
            <div
                        className="menu-content"
            >
                        <ul>
                                    <li
                                                className="menu-link"
                                    >
                                                <NavLink
                                                            activeClassName="selected"
                                                            aria-current="page"
                                                            to="/"
                                                >
                                                            Home
                                                </NavLink>
                                    </li>
                                    <li
                                                className="menu-link"
                                    >
                                                <NavLink
                                                            activeClassName="selected"
                                                            aria-current="page"
                                                            to="/profile"
                                                >
                                                            Profile
                                                </NavLink>
                                    </li>
                                    <li
                                                className="menu-link"
                                    >
                                                <NavLink
                                                            activeClassName="selected"
                                                            aria-current="page"
                                                            to="/ideaform"
                                                >
                                                            New Idea
                                                </NavLink>
                                    </li>
                                    <li
                                                className="menu-link"
                                                onClick={[Function]}
                                    >
                                                <a>
                                                            Sign Up / Sign In
                                                </a>
                                    </li>
                        </ul>
            </div>
</div>,
        ],
        "className": "header--container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1
              className="app--title"
>
              New Idea
</h1>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "New Idea",
              "className": "app--title",
            },
            "ref": null,
            "rendered": "New Idea",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "sign--up-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                id="menu"
                type="checkbox"
/>,
              <label
                htmlFor="menu"
/>,
              <div
                className="menu-content"
>
                <ul>
                                <li
                                                className="menu-link"
                                >
                                                <NavLink
                                                                activeClassName="selected"
                                                                aria-current="page"
                                                                to="/"
                                                >
                                                                Home
                                                </NavLink>
                                </li>
                                <li
                                                className="menu-link"
                                >
                                                <NavLink
                                                                activeClassName="selected"
                                                                aria-current="page"
                                                                to="/profile"
                                                >
                                                                Profile
                                                </NavLink>
                                </li>
                                <li
                                                className="menu-link"
                                >
                                                <NavLink
                                                                activeClassName="selected"
                                                                aria-current="page"
                                                                to="/ideaform"
                                                >
                                                                New Idea
                                                </NavLink>
                                </li>
                                <li
                                                className="menu-link"
                                                onClick={[Function]}
                                >
                                                <a>
                                                                Sign Up / Sign In
                                                </a>
                                </li>
                </ul>
</div>,
            ],
            "className": "collapsible--menu",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "menu",
                "type": "checkbox",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "htmlFor": "menu",
              },
              "ref": null,
              "rendered": null,
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul>
                  <li
                                    className="menu-link"
                  >
                                    <NavLink
                                                      activeClassName="selected"
                                                      aria-current="page"
                                                      to="/"
                                    >
                                                      Home
                                    </NavLink>
                  </li>
                  <li
                                    className="menu-link"
                  >
                                    <NavLink
                                                      activeClassName="selected"
                                                      aria-current="page"
                                                      to="/profile"
                                    >
                                                      Profile
                                    </NavLink>
                  </li>
                  <li
                                    className="menu-link"
                  >
                                    <NavLink
                                                      activeClassName="selected"
                                                      aria-current="page"
                                                      to="/ideaform"
                                    >
                                                      New Idea
                                    </NavLink>
                  </li>
                  <li
                                    className="menu-link"
                                    onClick={[Function]}
                  >
                                    <a>
                                                      Sign Up / Sign In
                                    </a>
                  </li>
</ul>,
                "className": "menu-content",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li
                      className="menu-link"
>
                      <NavLink
                                            activeClassName="selected"
                                            aria-current="page"
                                            to="/"
                      >
                                            Home
                      </NavLink>
</li>,
                    <li
                      className="menu-link"
>
                      <NavLink
                                            activeClassName="selected"
                                            aria-current="page"
                                            to="/profile"
                      >
                                            Profile
                      </NavLink>
</li>,
                    <li
                      className="menu-link"
>
                      <NavLink
                                            activeClassName="selected"
                                            aria-current="page"
                                            to="/ideaform"
                      >
                                            New Idea
                      </NavLink>
</li>,
                    <li
                      className="menu-link"
                      onClick={[Function]}
>
                      <a>
                                            Sign Up / Sign In
                      </a>
</li>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <NavLink
                        activeClassName="selected"
                        aria-current="page"
                        to="/"
>
                        Home
</NavLink>,
                      "className": "menu-link",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "activeClassName": "selected",
                        "aria-current": "page",
                        "children": "Home",
                        "to": "/",
                      },
                      "ref": null,
                      "rendered": "Home",
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <NavLink
                        activeClassName="selected"
                        aria-current="page"
                        to="/profile"
>
                        Profile
</NavLink>,
                      "className": "menu-link",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "activeClassName": "selected",
                        "aria-current": "page",
                        "children": "Profile",
                        "to": "/profile",
                      },
                      "ref": null,
                      "rendered": "Profile",
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <NavLink
                        activeClassName="selected"
                        aria-current="page"
                        to="/ideaform"
>
                        New Idea
</NavLink>,
                      "className": "menu-link",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "activeClassName": "selected",
                        "aria-current": "page",
                        "children": "New Idea",
                        "to": "/ideaform",
                      },
                      "ref": null,
                      "rendered": "New Idea",
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a>
                        Sign Up / Sign In
</a>,
                      "className": "menu-link",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Sign Up / Sign In",
                      },
                      "ref": null,
                      "rendered": "Sign Up / Sign In",
                      "type": "a",
                    },
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "disableLifecycleMethods": true,
    "hydrateIn": undefined,
  },
}
`;

exports[`<Header /> should render when user authenticated 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    authenticated="1234adsf"
    myIdeas={
        Array [
            Object {
              "id": 1,
              "title": "helloe",
            },
          ]
    }
    user={
        Object {
            "email": "someemail@mail.com",
            "id": "1234adsf",
            "ideas": Array [
              Object {
                "id": 1,
                "title": "helloe",
              },
            ],
            "name": "Jeff",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/"
>
          <h1
                    className="app--title"
          >
                    New Idea
          </h1>
</Link>,
        <div
          className="sign--up-container"
/>,
        <div
          className="collapsible--menu"
>
          <input
                    id="menu"
                    type="checkbox"
          />
          <label
                    htmlFor="menu"
          />
          <div
                    className="menu-content"
          >
                    <ul>
                              <li
                                        className="menu-link"
                              >
                                        <NavLink
                                                  activeClassName="selected"
                                                  aria-current="page"
                                                  to="/"
                                        >
                                                  Home
                                        </NavLink>
                              </li>
                              <li
                                        className="menu-link"
                              >
                                        <NavLink
                                                  activeClassName="selected"
                                                  aria-current="page"
                                                  to="/profile"
                                        >
                                                  Profile
                                        </NavLink>
                              </li>
                              <li
                                        className="menu-link"
                              >
                                        <NavLink
                                                  activeClassName="selected"
                                                  aria-current="page"
                                                  to="/ideaform"
                                        >
                                                  New Idea
                                        </NavLink>
                              </li>
                              <li
                                        className="menu-link"
                                        onClick={[Function]}
                              >
                                        <a>
                                                  Sign Out
                                        </a>
                              </li>
                    </ul>
          </div>
</div>,
      ],
      "className": "header--container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <h1
            className="app--title"
>
            New Idea
</h1>,
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "New Idea",
            "className": "app--title",
          },
          "ref": null,
          "rendered": "New Idea",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "sign--up-container",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              id="menu"
              type="checkbox"
/>,
            <label
              htmlFor="menu"
/>,
            <div
              className="menu-content"
>
              <ul>
                            <li
                                          className="menu-link"
                            >
                                          <NavLink
                                                        activeClassName="selected"
                                                        aria-current="page"
                                                        to="/"
                                          >
                                                        Home
                                          </NavLink>
                            </li>
                            <li
                                          className="menu-link"
                            >
                                          <NavLink
                                                        activeClassName="selected"
                                                        aria-current="page"
                                                        to="/profile"
                                          >
                                                        Profile
                                          </NavLink>
                            </li>
                            <li
                                          className="menu-link"
                            >
                                          <NavLink
                                                        activeClassName="selected"
                                                        aria-current="page"
                                                        to="/ideaform"
                                          >
                                                        New Idea
                                          </NavLink>
                            </li>
                            <li
                                          className="menu-link"
                                          onClick={[Function]}
                            >
                                          <a>
                                                        Sign Out
                                          </a>
                            </li>
              </ul>
</div>,
          ],
          "className": "collapsible--menu",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "id": "menu",
              "type": "checkbox",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "htmlFor": "menu",
            },
            "ref": null,
            "rendered": null,
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ul>
                <li
                                className="menu-link"
                >
                                <NavLink
                                                activeClassName="selected"
                                                aria-current="page"
                                                to="/"
                                >
                                                Home
                                </NavLink>
                </li>
                <li
                                className="menu-link"
                >
                                <NavLink
                                                activeClassName="selected"
                                                aria-current="page"
                                                to="/profile"
                                >
                                                Profile
                                </NavLink>
                </li>
                <li
                                className="menu-link"
                >
                                <NavLink
                                                activeClassName="selected"
                                                aria-current="page"
                                                to="/ideaform"
                                >
                                                New Idea
                                </NavLink>
                </li>
                <li
                                className="menu-link"
                                onClick={[Function]}
                >
                                <a>
                                                Sign Out
                                </a>
                </li>
</ul>,
              "className": "menu-content",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <li
                    className="menu-link"
>
                    <NavLink
                                        activeClassName="selected"
                                        aria-current="page"
                                        to="/"
                    >
                                        Home
                    </NavLink>
</li>,
                  <li
                    className="menu-link"
>
                    <NavLink
                                        activeClassName="selected"
                                        aria-current="page"
                                        to="/profile"
                    >
                                        Profile
                    </NavLink>
</li>,
                  <li
                    className="menu-link"
>
                    <NavLink
                                        activeClassName="selected"
                                        aria-current="page"
                                        to="/ideaform"
                    >
                                        New Idea
                    </NavLink>
</li>,
                  <li
                    className="menu-link"
                    onClick={[Function]}
>
                    <a>
                                        Sign Out
                    </a>
</li>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <NavLink
                      activeClassName="selected"
                      aria-current="page"
                      to="/"
>
                      Home
</NavLink>,
                    "className": "menu-link",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "activeClassName": "selected",
                      "aria-current": "page",
                      "children": "Home",
                      "to": "/",
                    },
                    "ref": null,
                    "rendered": "Home",
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <NavLink
                      activeClassName="selected"
                      aria-current="page"
                      to="/profile"
>
                      Profile
</NavLink>,
                    "className": "menu-link",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "activeClassName": "selected",
                      "aria-current": "page",
                      "children": "Profile",
                      "to": "/profile",
                    },
                    "ref": null,
                    "rendered": "Profile",
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <NavLink
                      activeClassName="selected"
                      aria-current="page"
                      to="/ideaform"
>
                      New Idea
</NavLink>,
                    "className": "menu-link",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "activeClassName": "selected",
                      "aria-current": "page",
                      "children": "New Idea",
                      "to": "/ideaform",
                    },
                    "ref": null,
                    "rendered": "New Idea",
                    "type": [Function],
                  },
                  "type": "li",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <a>
                      Sign Out
</a>,
                    "className": "menu-link",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Sign Out",
                    },
                    "ref": null,
                    "rendered": "Sign Out",
                    "type": "a",
                  },
                  "type": "li",
                },
              ],
              "type": "ul",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/"
>
            <h1
                        className="app--title"
            >
                        New Idea
            </h1>
</Link>,
          <div
            className="sign--up-container"
/>,
          <div
            className="collapsible--menu"
>
            <input
                        id="menu"
                        type="checkbox"
            />
            <label
                        htmlFor="menu"
            />
            <div
                        className="menu-content"
            >
                        <ul>
                                    <li
                                                className="menu-link"
                                    >
                                                <NavLink
                                                            activeClassName="selected"
                                                            aria-current="page"
                                                            to="/"
                                                >
                                                            Home
                                                </NavLink>
                                    </li>
                                    <li
                                                className="menu-link"
                                    >
                                                <NavLink
                                                            activeClassName="selected"
                                                            aria-current="page"
                                                            to="/profile"
                                                >
                                                            Profile
                                                </NavLink>
                                    </li>
                                    <li
                                                className="menu-link"
                                    >
                                                <NavLink
                                                            activeClassName="selected"
                                                            aria-current="page"
                                                            to="/ideaform"
                                                >
                                                            New Idea
                                                </NavLink>
                                    </li>
                                    <li
                                                className="menu-link"
                                                onClick={[Function]}
                                    >
                                                <a>
                                                            Sign Out
                                                </a>
                                    </li>
                        </ul>
            </div>
</div>,
        ],
        "className": "header--container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1
              className="app--title"
>
              New Idea
</h1>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "New Idea",
              "className": "app--title",
            },
            "ref": null,
            "rendered": "New Idea",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "sign--up-container",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                id="menu"
                type="checkbox"
/>,
              <label
                htmlFor="menu"
/>,
              <div
                className="menu-content"
>
                <ul>
                                <li
                                                className="menu-link"
                                >
                                                <NavLink
                                                                activeClassName="selected"
                                                                aria-current="page"
                                                                to="/"
                                                >
                                                                Home
                                                </NavLink>
                                </li>
                                <li
                                                className="menu-link"
                                >
                                                <NavLink
                                                                activeClassName="selected"
                                                                aria-current="page"
                                                                to="/profile"
                                                >
                                                                Profile
                                                </NavLink>
                                </li>
                                <li
                                                className="menu-link"
                                >
                                                <NavLink
                                                                activeClassName="selected"
                                                                aria-current="page"
                                                                to="/ideaform"
                                                >
                                                                New Idea
                                                </NavLink>
                                </li>
                                <li
                                                className="menu-link"
                                                onClick={[Function]}
                                >
                                                <a>
                                                                Sign Out
                                                </a>
                                </li>
                </ul>
</div>,
            ],
            "className": "collapsible--menu",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "id": "menu",
                "type": "checkbox",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "htmlFor": "menu",
              },
              "ref": null,
              "rendered": null,
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul>
                  <li
                                    className="menu-link"
                  >
                                    <NavLink
                                                      activeClassName="selected"
                                                      aria-current="page"
                                                      to="/"
                                    >
                                                      Home
                                    </NavLink>
                  </li>
                  <li
                                    className="menu-link"
                  >
                                    <NavLink
                                                      activeClassName="selected"
                                                      aria-current="page"
                                                      to="/profile"
                                    >
                                                      Profile
                                    </NavLink>
                  </li>
                  <li
                                    className="menu-link"
                  >
                                    <NavLink
                                                      activeClassName="selected"
                                                      aria-current="page"
                                                      to="/ideaform"
                                    >
                                                      New Idea
                                    </NavLink>
                  </li>
                  <li
                                    className="menu-link"
                                    onClick={[Function]}
                  >
                                    <a>
                                                      Sign Out
                                    </a>
                  </li>
</ul>,
                "className": "menu-content",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li
                      className="menu-link"
>
                      <NavLink
                                            activeClassName="selected"
                                            aria-current="page"
                                            to="/"
                      >
                                            Home
                      </NavLink>
</li>,
                    <li
                      className="menu-link"
>
                      <NavLink
                                            activeClassName="selected"
                                            aria-current="page"
                                            to="/profile"
                      >
                                            Profile
                      </NavLink>
</li>,
                    <li
                      className="menu-link"
>
                      <NavLink
                                            activeClassName="selected"
                                            aria-current="page"
                                            to="/ideaform"
                      >
                                            New Idea
                      </NavLink>
</li>,
                    <li
                      className="menu-link"
                      onClick={[Function]}
>
                      <a>
                                            Sign Out
                      </a>
</li>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <NavLink
                        activeClassName="selected"
                        aria-current="page"
                        to="/"
>
                        Home
</NavLink>,
                      "className": "menu-link",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "activeClassName": "selected",
                        "aria-current": "page",
                        "children": "Home",
                        "to": "/",
                      },
                      "ref": null,
                      "rendered": "Home",
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <NavLink
                        activeClassName="selected"
                        aria-current="page"
                        to="/profile"
>
                        Profile
</NavLink>,
                      "className": "menu-link",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "activeClassName": "selected",
                        "aria-current": "page",
                        "children": "Profile",
                        "to": "/profile",
                      },
                      "ref": null,
                      "rendered": "Profile",
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <NavLink
                        activeClassName="selected"
                        aria-current="page"
                        to="/ideaform"
>
                        New Idea
</NavLink>,
                      "className": "menu-link",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "activeClassName": "selected",
                        "aria-current": "page",
                        "children": "New Idea",
                        "to": "/ideaform",
                      },
                      "ref": null,
                      "rendered": "New Idea",
                      "type": [Function],
                    },
                    "type": "li",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <a>
                        Sign Out
</a>,
                      "className": "menu-link",
                      "onClick": [Function],
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Sign Out",
                      },
                      "ref": null,
                      "rendered": "Sign Out",
                      "type": "a",
                    },
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "disableLifecycleMethods": true,
    "hydrateIn": undefined,
  },
}
`;
